--- a/lib/translations/ar.json
+++ b/lib/translations/ar.json
@@ -1152,6 +1152,7 @@
     "searchOption": "ابحث عن خيار...",
     "noOptions": "لا يوجد خيارات.",
     "switchToEnglish": "التبديل إلى العربية",
-    "arabic": "عربي"
+    "arabic": "عربي",
+    "showMore": "عرض المزيد"
   }
 }
