--- a/lib/translations/en.json
+++ b/lib/translations/en.json
@@ -1117,6 +1117,7 @@
     "searchOption": "Search for option...",
     "noOptions": "No options found.",
     "switchToEnglish": "Switch to English",
-    "arabic": "Arabic"
+    "arabic": "Arabic",
+    "showMore": "Show More"
   }
 }
