--- a/lib/translations/ar.json
+++ b/lib/translations/ar.json
@@ -516,7 +516,7 @@
     "codes": {
       "title": "إدارة الأكواد",
       "createNew": "إنشاء أكواد جديدة",
-      "searchPlaceholder": "البحث بالكود أو اسم الكورس...",
+      "searchPlaceholder": "البحث بالكود أو اسم الكورس أو اسم الطالب...",
       "filterByCourse": "تصفية حسب الكورس:",
       "allCourses": "جميع الكورسات",
       "stats": {
@@ -529,6 +529,7 @@
         "course": "الكورس",
         "status": "الحالة",
         "user": "المستخدم",
+        "grade": "الصف",
         "usedAt": "تاريخ الاستخدام",
         "createdAt": "تاريخ الإنشاء",
         "actions": "الإجراءات"
@@ -678,6 +679,16 @@
         "addError": "حدث خطأ أثناء إضافة الكورس",
         "deleteSuccess": "تم حذف الكورس من الطالب بنجاح",
         "deleteError": "حدث خطأ أثناء حذف الكورس"
+      },
+      "chapters": {
+        "title": "الفصول",
+        "empty": "لا توجد فصول متاحة",
+        "add": "إضافة الوصول",
+        "remove": "إزالة الوصول",
+        "addSuccess": "تم إضافة الوصول للفصل بنجاح",
+        "addError": "حدث خطأ أثناء إضافة الوصول للفصل",
+        "removeSuccess": "تم إزالة الوصول للفصل بنجاح",
+        "removeError": "حدث خطأ أثناء إزالة الوصول للفصل"
       },
       "empty": "لا توجد طلاب متاحين"
     },
@@ -975,6 +986,16 @@
         "deleteSuccess": "تم حذف الكورس من الطالب بنجاح",
         "deleteError": "حدث خطأ أثناء حذف الكورس"
       },
+      "chapters": {
+        "title": "الفصول",
+        "empty": "لا توجد فصول متاحة",
+        "add": "إضافة الوصول",
+        "remove": "إزالة الوصول",
+        "addSuccess": "تم إضافة الوصول للفصل بنجاح",
+        "addError": "حدث خطأ أثناء إضافة الوصول للفصل",
+        "removeSuccess": "تم إزالة الوصول للفصل بنجاح",
+        "removeError": "حدث خطأ أثناء إزالة الوصول للفصل"
+      },
       "empty": "لا توجد طلاب متاحين"
     },
     "quizzes": {
@@ -1021,7 +1042,7 @@
       "title": "إدارة الأكواد",
       "createNew": "إنشاء أكواد جديدة",
       "codesList": "قائمة الأكواد",
-      "searchPlaceholder": "البحث بالكود أو اسم الكورس أو المنشئ...",
+      "searchPlaceholder": "البحث بالكود أو اسم الكورس أو المنشئ أو اسم الطالب...",
       "filterByCourse": "تصفية حسب الكورس:",
       "allCourses": "جميع الكورسات",
       "statistics": {
@@ -1035,6 +1056,7 @@
         "creator": "المنشئ",
         "status": "الحالة",
         "user": "المستخدم",
+        "grade": "الصف",
         "usedAt": "تاريخ الاستخدام",
         "createdAt": "تاريخ الإنشاء",
         "actions": "الإجراءات"
