--- a/lib/translations/en.json
+++ b/lib/translations/en.json
@@ -516,7 +516,7 @@
     "codes": {
       "title": "Code Management",
       "createNew": "Create New Codes",
-      "searchPlaceholder": "Search by code, course name, or student name...",
+      "searchPlaceholder": "Search by code, course name, student name, or phone number...",
       "filterByCourse": "Filter by Course:",
       "allCourses": "All Courses",
       "stats": {
@@ -554,6 +554,39 @@
         "generateError": "An error occurred while creating codes",
         "copySuccess": "Code copied",
         "copyError": "Failed to copy code"
+      },
+      "copy": {
+        "button": "Copy Codes",
+        "title": "Copy All Codes",
+        "description": "Select a course to copy all codes for that course",
+        "course": "Course",
+        "selectCourse": "Select a course...",
+        "buttonLabel": "Copy Codes",
+        "success": "Copied {count} codes to clipboard"
+      },
+      "delete": {
+        "button": "Delete Codes",
+        "title": "Delete Codes",
+        "description": "Select a course or codes to delete",
+        "descriptionSelected": "You have selected {count} code(s). Choose an action:",
+        "course": "Course",
+        "selectCourse": "Select a course...",
+        "action": "Action",
+        "hideOption": "Hide codes (still usable, can be restored)",
+        "deleteOption": "Permanently delete codes (cannot be recovered)",
+        "hideButton": "Hide",
+        "deleteButton": "Delete",
+        "hideSuccess": "Hidden {count} code(s)",
+        "confirmSingle": "Are you sure you want to permanently delete this code? This cannot be undone."
+      },
+      "hidden": {
+        "title": "Hidden Codes",
+        "show": "Show",
+        "hide": "Hide",
+        "empty": "No hidden codes found",
+        "restore": "Restore",
+        "restoreSuccess": "Restored {count} code(s)",
+        "deleteSuccess": "Permanently deleted {count} code(s)"
       },
       "empty": "No codes found"
     },
@@ -1007,7 +1040,7 @@
       "title": "Code Management",
       "createNew": "Create New Codes",
       "codesList": "Codes List",
-      "searchPlaceholder": "Search by code, course name, creator, or student name...",
+      "searchPlaceholder": "Search by code, course name, creator, student name, or phone number...",
       "filterByCourse": "Filter by Course:",
       "allCourses": "All Courses",
       "statistics": {
@@ -1072,7 +1105,8 @@
         "deleteOption": "Permanently delete codes (cannot be recovered)",
         "hideButton": "Hide",
         "deleteButton": "Delete",
-        "hideSuccess": "Hidden {count} code(s)"
+        "hideSuccess": "Hidden {count} code(s)",
+        "confirmSingle": "Are you sure you want to permanently delete this code? This cannot be undone."
       },
       "hidden": {
         "title": "Hidden Codes",
@@ -1118,6 +1152,22 @@
         "createSuccess": "Student account created successfully"
       }
     }
+  },
+  "videoPlayer": {
+    "play": "Play",
+    "back10s": "Back 10 seconds",
+    "forward10s": "Forward 10 seconds",
+    "changeQuality": "Change video quality",
+    "qualityTutorialTitle": "How to change video quality",
+    "qualityTutorialStep1": "1. Click the gear (settings) icon on the video player below",
+    "qualityTutorialStep2": "2. Select \"Quality\" from the menu",
+    "qualityTutorialStep3": "3. Choose your preferred video quality (e.g. 1080p or 720p)",
+    "qualityTutorialStep4": "4. Click \"Back to video\" when done",
+    "selectQuality": "Select video quality",
+    "qualityAuto": "Auto",
+    "quality720": "720p (HD)",
+    "quality1080": "1080p (Full HD)",
+    "backToVideo": "Back to video"
   },
   "common": {
     "loading": "Loading...",
